# madputty

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_OVERVIEW.md  README.md
.github/workflows/: ci.yml  release.yml
.kiro/: BUGS-WINDOWS-TERMINAL.md  decisions.md  tasks.md
.kiro/specs/kiro-cli-log-analysis/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/madputty-cli/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/serial-terminal/: .config.kiro  design.md  requirements.md  tasks.md
src/: cli.rs  errors.rs  lib.rs  list.rs  main.rs  serial_config.rs  serial_port_trait.rs  session.rs  theme.rs
src/ai/: error_scanner.rs  kiro_invoker.rs  mod.rs  pane.rs  redactor.rs  response_log.rs  rolling_buffer.rs
src/io/: colorizer.rs  keymap.rs  mod.rs  stdout_sink.rs
src/ui/: mod.rs  split_pane.rs
tests/: non_blocking_pump.rs  redaction_properties.rs
