[package]
name = "madputty"
version = "0.1.0"
edition = "2021"
description = "Picocom-style serial terminal"

[[bin]]
name = "madputty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
console = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serialport = "4"
crossterm = "0.27"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
